apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: althea
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          resources:
            requests:
              memory: 768Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: jellyfin-volume
              mountPath: /config
              subPath: jellyfin/config
            - name: jellyfin-volume
              mountPath: /cache
              subPath: jellyfin/cache
            - name: media-volume
              mountPath: /media/anime
              subPath: media/anime
            - name: media-volume
              mountPath: /media/courses
              subPath: media/courses
            - name: media-volume
              mountPath: /media/movies
              subPath: media/movies
            - name: media2-volume
              mountPath: /media/sonarr
              subPath: media/sonarr
            - name: media2-volume
              mountPath: /media/western
              subPath: media/western
      volumes:
        - name: jellyfin-volume
          persistentVolumeClaim:
            claimName: data-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
        - name: media2-volume
          persistentVolumeClaim:
            claimName: storage3-pvc
